gatekeeper/desotech/dryrun/bad_resource/duplicate_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host2
spec:
  rules:
    - host: example.desotech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx3
                port:
                  number: 80
