gatekeeper/desotech/dryrun/bad_resource/ingress02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress02
spec:
  rules:
    - host: example.desotech.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application02
                port:
                  number: 80
